# llm-council

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start.sh
backend/: Dockerfile  alembic.ini  config.py  council.py  entrypoint.sh  main.py  openrouter.py  storage.py
backend/src/: __init__.py  config.py
backend/src/app/: main.py  tools_runtime.py
backend/src/db/: __init__.py  models.py  session.py
backend/src/engine/: __init__.py  council.py  openrouter.py  schemas.py
backend/src/mcp/: __init__.py  auth.py  runtime.py  server.py  tools.py  types.py
backend/src/scripts/: __init__.py  create_api_key.py  deactivate_api_key.py  rotate_api_key.py  run_migrations_with_lock.py
backend/src/services/: __init__.py  auth.py  cache.py  conversation_store.py  council_runner.py  json_store.py  postgres_store.py  quota.py  runs.py  store_factory.py  usage.py
backend/src/tools/: __init__.py  handlers.py
backend/src/utils/: redact.py
backend/tests/: conftest.py  test_account_endpoints.py  test_c3_readiness.py  test_cache_key.py  test_mcp_council_ask.py  test_mcp_council_pipeline.py  test_mcp_ops_hardening.py  test_openrouter_client.py  test_postgres_store.py  test_stage2_retry.py  test_tools_gateway_http.py  test_usage.py
frontend/: Dockerfile  config.js.template  nginx.conf.template  package-lock.json  package.json
frontend/public/: config.js
frontend/src/: ApiKeyContext.jsx  App.jsx  api.js  config.js
frontend/src/components/: ApiKeyModal.css  ApiKeyModal.jsx  ChatInterface.jsx  Sidebar.css  Sidebar.jsx
(+31 files in other folders)
